# seminar-manager

./: CMakeLists.txt  CSVHandler.cpp  CSVHandler.h  CSVHandler.hpp  DateSortProxyModel.cpp  DateSortProxyModel.hpp  Seminar.cpp  Seminar.h  SeminarData.cpp  SeminarData.hpp  SeminarManager.cpp  SeminarManager.hpp  StudentData.cpp  StudentData.hpp  StudentManager.cpp  StudentManager.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.bak  mainwindow.ui.bak1  secondwindow.cpp  secondwindow.h  secondwindow.ui  seminar.cpp  seminar.hpp  Математика.csv
Data/: Физика.csv
